# docs/swagger.json
@@ -15,12 +15,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "系统用户"
+                    "用户中心"
                 ],
                 "summary": "修改密码",
                 "parameters": [
                     {
-                        "description": "用户名, 原密码, 新密码",
+                        "description": "原密码, 新密码",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -57,7 +57,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "系统用户"
+                    "用户中心"
                 ],
                 "summary": "登录",
                 "parameters": [
@@ -102,7 +102,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "系统用户"
+                    "用户中心"
                 ],
                 "summary": "注册账号",
                 "parameters": [
@@ -128,7 +128,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/response.SysUserResponse"
+                                            "$ref": "#/definitions/response.LoginResponse"
                                         },
                                         "msg": {
                                             "type": "string"
@@ -224,8 +224,14 @@
         "response.SysUserResponse": {
             "type": "object",
             "properties": {
+                "balance": {
+                    "type": "number"
+                },
                 "email": {
                     "type": "string"
+                },
+                "freezeBalance": {
+                    "type": "number"
                 },
                 "nickName": {
                     "type": "string"
@@ -237,6 +243,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
